# gmacs

./: CMakeLists.txt  Makefile  define.k  gmacs.conf  style.qss
include/: gmacs.hpp  gmacs_class.hpp
src/: Gmacs.cpp  GmacsCompleter.cpp  GmacsCompletion.cpp  GmacsInteractiveDesigner.cpp  GmacsKeyBind.cpp  GmacsLineField.cpp  GmacsLineNumberArea.cpp  GmacsMainField.cpp  GmacsMainWidget.cpp  GmacsMainWindow.cpp  GmacsParser.cpp  GmacsPreprocessor.cpp  GmacsScriptLoader.cpp  GmacsStatusBar.cpp  GmacsSyntaxHighlighter.cpp  GmacsTabWidget.cpp  GmacsTextField.cpp  GmacsWidget.cpp  completion.cpp  line_field.cpp  main.cpp  script.cpp  syntax.cpp  text_field.cpp  token.cpp
